test/multilocale/bradc/referToLocaleOne.comm-none.good
On initial locale: 0
referToLocaleOne.chpl:2: error: halt reached - indexing out of bounds in dimension 1: [1] but array bounds are 0..0
